# Newsfeed-Portal

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/newsfeed/: admin.py  apps.py  models.py  urls.py
apps/newsfeed/api/: newsfeed.py
apps/newsfeed/migrations/: 0001_initial.py  0002_usersettings.py  0003_delete_usersettings.py  0004_news_news_link.py
apps/newsfeed/templates/newsfeed/: newsfeed.html
apps/newsfeed/utils/: news_headlines.py  save_news.py
apps/newsfeed/views/: newsfeed.py
apps/user/: models.py  serializers.py  urls.py  views.py
apps/user/api/: user.py
apps/user/migrations/: 0001_initial.py  0002_auto_20210820_1007.py
apps/user/templates/registration/: base.html  login.html  signup.html
apps/user/templates/user/: settings.html  sign_in.html
apps/user/utils/: authenticate.py
conf/: asgi.py  urls.py  wsgi.py
conf/settings/: .env.example  base.py
core/: enums.py  utils.py
