[tool.poetry]
name = "NewsfeedPortal"
version = "0.1.0"
description = "The objective of this project is to create a personalized Newsfeed portal."
authors = ["Nur"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django-oauth-toolkit = "^1.5.0"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"
Django = "^3.2.6"
django-environ = "^0.4.5"
django-extensions = "^3.1.3"
newsapi-python = "^0.2.6"
drf-yasg = "^1.20.0"
docutils = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
